--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ idna==3.10
 packaging==24.2
 psycopg2==2.9.10
 pycparser==2.22
+python-dotenv==1.1.0
 requests==2.32.3
 schedule==1.2.2
 setuptools==78.1.0
